# 8_2_WEB

web8_2/: pyproject.toml
web8_2/app/: common.py  consumer.py  models.py  producer.py
